adjusted styling of nav, no longer fixed, also updated top spacing for organizations view

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -3,6 +3,9 @@ div.row.org-container {
   margin-left: 7.5vw;
   margin-right: 7.5vw;
 }
+div.top-offset {
+  padding-top: 5%
+}
 div.card.medium {
   word-wrap: break-word;
   margin: 5px;
@@ -32,6 +35,7 @@ div.valign-wrapper {
   img {
     margin: auto;
     max-height: 100%;
+    max-width: 100%;
     height: auto;
     width: auto;
   }
